# Cura

./: .gitignore  CMakeLists.txt  README.md  Vagrantfile  cura_app.py  default.nix  dev-env  dev-env-provision.sh  provision.sh  requirements.txt  setup-development-client  setup-development-server
cura/: CrashHandler.py  CuraActions.py  CuraApplication.py
plugins/CuraEngineBackend/: CuraEngineBackend.py
plugins/USBPrinting/: USBPrinterManager.py
resources/i18n/: cura_qt.pot
resources/i18n/en/: cura.po  cura_qt.po  fdmprinter.json.po
resources/i18n/es/: cura_qt.po
resources/i18n/pt/: cura.po  cura_qt.po  fdmprinter.json.po
resources/meshes/: deskbox_platform.stl
resources/qml/: Cura.qml  Sidebar.qml  SidebarHeader.qml
resources/settings/: deskbox_mega.json  deskbox_multi.json  ultimaker_original.json
resources/themes/cura/: theme.json
